--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
             {% for error in form.phone.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}<br>
-            <input type="submit" value="Sign Up">
+            <input type="submit" class="button alt" value="Sign Up">
         </p>
     </form>
     <hr>
