--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,21 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>VT-3 Automated Schedule Notifications</title>
-</head>
-<body>
-    <div><h1> Welcome to VT-3 Automated Schedule Notifications</h1></div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <ul>
-                {% for message in messages %}
-                    <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
-    {% block content %} {% endblock %}
-</body>
+<!DOCTYPE HTML>
+<!--
+    Introspect by TEMPLATED
+    templated.co @templatedco
+    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
+<html>
+    <head>
+        <title>VT-3 Automated Schedule Notifications</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="static/assets/css/main.css" />
+    </head>
+    <body>
+
+        <!-- Header -->
+            <header id="header">
+                <div class="inner">
+                    <a href="/" class="logo">VT-3 Notifications</a>
+                    <nav id="nav">
+                        <a href="/#">Home</a>
+                        <a href="/#signup">Signup</a>
+                        <a href="/#bugs">Report a Bug</a>
+                        <a href="/#about">About</a>
+                    </nav>
+                </div>
+            </header>
+            <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+
+        <!-- Banner -->
+            <section id="banner">
+                <div class="inner">
+                    <h1>VT-3 Notifications: <span>Fully<br />
+                    automated schedule updates.</span></h1>
+                    <ul class="actions">
+                        <li><a href="/#signup" class="button alt">Get Started</a></li>
+                    </ul>
+                </div>
+            </section>
+
+        <!-- One -->
+            <a name=signup> </a>
+            <section id="one">
+                <div class="inner">
+                    <header>
+                        <h2>Sign Up For Notifications</h2>
+                    </header>
+                    <p>
+                        {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                <ul>
+                                {% for message in messages %}
+                                    <li>{{ message }}</li>
+                                {% endfor %}
+                                </ul>
+                            {% endif %}
+                        {% endwith %}
+                        {% block content %} {% endblock %}
+                    </p>
+                </div>
+            </section>
+
+        <!-- Scripts -->
+            <script src="static/assets/js/jquery.min.js"></script>
+            <script src="static/assets/js/skel.min.js"></script>
+            <script src="static/assets/js/util.js"></script>
+            <script src="static/assets/js/main.js"></script>
+
+    </body>
 </html>
