--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -1788,8 +1788,12 @@
 		color: #e5474b;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h4, h5, h6 {
 		color: #e5474b;
+	}
+
+	h3 {
+		color: #717171;
 	}
 
 	blockquote {
