Fixed timezone error, adjusted text message format

--- a/app/templates/generic.html
+++ b/app/templates/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Introspect by TEMPLATED</title>
+		<title>VT-3 Notifications - Unsubscribe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/static/assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="index.html" class="logo">VT-3 Notifications</a>
 					<nav id="nav">
                         <a href="/#">Home</a>
                         <a href="/#signup">Signup</a>
