Updated web pages, implemented bug report functionality.

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,23 @@
-{% extends "generic.html" %}
+{% extends "base.html" %}
 {% block content %}
-
+    <section id="main">
+        <div class="inner">
+            <p>
+                Thank you for your interest in this project. This project was
+                created for the US Navy's Flight Training Squadron 3 to increase
+                the efficiency of flight schedule distribution. Please feel free
+                to checkout the Github page and provide any bug reports or
+                feature requests either there or directly through the "Report a
+                Bug" link in the navigation bar.
+            </p>
+            <p>
+                The creator of this project is Capt Richard Johnson of the US
+                Air Force. Capt Johnson holds a Bachelor's Degree in Mathematics
+                from the University of Iowa as well as a Master's of Information
+                and Data Science from the University of California, Berkeley.
+                Additionally, Capt Johnson is a combat pilot with over 1,800
+                hours in the T-6A/B, T-1A, and C-17A aircraft.
+            </p>
+        </div>
+    </section>
 {% endblock %}
