--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -3749,7 +3749,7 @@
 	#footer {
 		background-color: #e5474b;
 		color: #f2a3a5;
-		padding: 4em 0 2em 0;
+		padding: 1em 0 0 0;
 		background: #e5474b;
 	}
 
@@ -3933,6 +3933,16 @@
 					width: 90%;
 				}
 
+			}
+
+		#footer .items {
+			font-size: 0.7em;
+			margin: 0 0 0.5em 0;
+			padding: 0;
+		}
+
+			#footer .items a {
+				color: #f2a3a5;
 			}
 
 		#footer .copyright {
