Added disclaimer of endorsement

--- a/app/templates/disclaimer.html
+++ b/app/templates/disclaimer.html
@@ -12,6 +12,15 @@
                 Github page and create a pull request that I only have to merge.
             </p>
 
+            <h2>Disclaimer of Endorsement</h2>
+            <p>
+                This is a private project. Any views and opinions expressed
+                are those of the authors and do not state or reflect those of
+                the United States Government, Department of Defense, or any of
+                its branches or agencies. This product is not endorsed by the
+                United States Government.
+            </p>
+
             <h2>MIT License</h2>
             <p>
                 Copyright (c) 2016 Richard Johnson<br><br>
