Added holiday party payment page

--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -2577,11 +2577,11 @@
 
 	table {
 		margin: 0 0 2em 0;
-		width: 100%;
+		/* width: 100%; */
 	}
 
 		table tbody tr {
-			border: solid 1px;
+			border: solid 0px;
 			border-left: 0;
 			border-right: 0;
 		}
