--- a/app/templates/holiday.html
+++ b/app/templates/holiday.html
@@ -89,7 +89,7 @@
                     </div>
                     <br><br>
                     <div class="table-wrapper" width="50%">
-                        <table class="alt" width="50%">
+                        <table width="50%">
                             <tbody>
                                 <tr>
                                     <th>Card Number</th>
@@ -135,7 +135,7 @@
                                 </tr>
                             </tbody>
                         </table>
-
+                        <span class="payment-errors" style="color: red"></span>
                         <table>
                             <tbody>
                                 <tr>
