added autofocus to holiday order form

--- a/app/templates/holiday.html
+++ b/app/templates/holiday.html
@@ -71,7 +71,7 @@
                     {{ form.hidden_tag() }}
                     <div class="row uniform 50%">
                         <div class="6u 12u$(xsmall)">
-                            Name: {{ form.name(size=40) }}
+                            Name: {{ form.name(size=40, autofocus=true) }}
                         </div>
 
                         <div class="6u 12u$(xsmall)">
