fixed dues to actually submit payment

--- a/app/templates/dues.html
+++ b/app/templates/dues.html
@@ -45,7 +45,7 @@
                             <td>3 Months</td>
                             <td>$30.00 + $1.20 fee</td>
                             <td>
-                                <form action="/your-server-side-code" method="POST">
+                                <form action="/dues" method="POST">
                                   {{ form.hidden_tag() }}
                                   <input type="hidden" name="amount" value="3120">
                                   <script
@@ -64,7 +64,7 @@
                             <td>6 Months</td>
                             <td>$60.00 + $2.10 fee</td>
                             <td>
-                                <form action="/your-server-side-code" method="POST">
+                                <form action="/dues" method="POST">
                                   {{ form.hidden_tag() }}
                                   <input type="hidden" name="amount" value="6210">
                                   <script
@@ -83,7 +83,7 @@
                             <td>9 Months</td>
                             <td>$90.00 + 3.00 fee</td>
                             <td>
-                                <form action="/your-server-side-code" method="POST">
+                                <form action="/dues" method="POST">
                                   {{ form.hidden_tag() }}
                                   <input type="hidden" name="amount" value="9300">
                                   <script
@@ -102,7 +102,7 @@
                             <td>1 Year</td>
                             <td>$120.00 + $3.89 fee</td>
                             <td>
-                                <form action="/your-server-side-code" method="POST">
+                                <form action="/dues" method="POST">
                                   {{ form.hidden_tag() }}
                                   <input type="hidden" name="amount" value="12389">
                                   <script
