--- a/app/templates/mugs.html
+++ b/app/templates/mugs.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
+    <meta id="stripe_pk" data-name="stripe_pk" content="{{ stripe_pk }}">
     <link rel="stylesheet" href="static/assets/css/payments.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <script type="text/javascript">
-        Stripe.setPublishableKey('pk_live_Hj1E6oPxWFQMFSFo1O1q5C2t');
+        var stripe_public_key = document.getElementById("stripe_pk").content;
+        console.log(stripe_public_key);
+        Stripe.setPublishableKey(stripe_public_key);
 
         $(function() {
             var $form = $('#payment-form');
@@ -34,6 +37,7 @@
 
                 // Get the token ID:
                 var token = response.id;
+                console.log(token)
 
                 // Insert the token ID into the form so it gets submitted to the server:
                 $form.append($('<input type="hidden" name="stripeToken">').val(token));
