--- a/app/templates/dues.html
+++ b/app/templates/dues.html
@@ -33,7 +33,7 @@
                                     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                                     data-key="pk_live_lGm77qI6A2EPB8voZy39FTg7"
                                     data-amount="5141"
-                                    data-name="$50 Landing Fees"
+                                    data-name="$50 Dining In Ticket"
                                     data-description="+$1.41 Credit Card Fee"
                                     data-image="static/images/vt3.png"
                                     data-locale="auto">
